--- a/src/components/navbar/_navbar.scss
+++ b/src/components/navbar/_navbar.scss
@@ -115,9 +115,11 @@
     height: 100%;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
     position: absolute;
     padding: 1.25em 2em;
-    gap: 0.5em;
+    gap: 1.5em;
     background: rgba(0, 0, 0, 0.8);
   }
   .nav-link {
