--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -23,7 +23,7 @@ ul {
   font-family: "Bellefair";
   text-transform: uppercase;
   color: #FFFFFF;
-  font-size: 5rem;
+  font-size: 4rem;
   letter-spacing: 0.15em;
   margin: 0.5em 0;
 }
@@ -31,30 +31,68 @@ ul {
 .sub-heading {
   color: #D0D6F9;
   font-family: "Barlow Condensed";
-  letter-spacing: 0.25em;
-  font-size: 2rem;
+  letter-spacing: 0.2rem;
+  font-size: 1.75rem;
+  font-weight: normal;
+  text-transform: uppercase;
 }
 
 .para {
   color: #D0D6F9;
   font-family: "Barlow";
   line-height: 1.5rem;
-  font-size: 0.85rem;
+  font-size: 1rem;
 }
 
 .nav-link {
   font-size: 0.85rem;
 }
 
-@media screen and (max-width: 768px) {
+.num {
+  opacity: 0.25;
+  margin-right: 0.5em;
+}
+
+.title, .sub-title {
+  color: #FFFFFF;
+  font-family: "Bellefair";
+  font-size: 1.25rem;
+  letter-spacing: 0.15rem;
+  text-transform: uppercase;
+  padding: 0.5em 0;
+}
+
+.sub-title {
+  color: #D0D6F9;
+  font-family: "Barlow Condensed";
+  font-size: 0.65rem;
+  font-weight: normal;
+  padding: 0;
+}
+
+@media screen and (min-width: 600px) and (max-width: 1000px) {
   .heading {
-    font-size: 3rem;
+    font-size: 2.75rem;
   }
   .sub-heading {
-    font-size: 1.25rem;
+    font-size: 1rem;
   }
   .para {
-    font-size: 0.85rem;
+    font-size: 0.75rem;
+  }
+  .nav-link {
+    font-size: 0.65rem;
+  }
+}
+@media screen and (max-width: 600px) {
+  .heading {
+    font-size: 2.5rem;
+  }
+  .sub-heading {
+    font-size: 1rem;
+  }
+  .para {
+    font-size: 0.75rem;
   }
 }
 .navbar {
@@ -89,9 +127,11 @@ ul {
   height: 100%;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
   position: absolute;
   padding: 1.25em 2em;
-  gap: 0.5em;
+  gap: 1.5em;
   background: rgba(0, 0, 0, 0.8);
 }
 .navbar .nav-link {
@@ -158,7 +198,7 @@ ul {
   justify-content: center;
 }
 .home-section .home-intro {
-  margin-top: 3em;
+  margin-top: 4em;
 }
 .home-section .flex {
   display: flex;
@@ -208,5 +248,75 @@ ul {
   .home-section .flex .home-graphics-container .home-graphics {
     width: 200px;
     height: 200px;
+  }
+}
+.destination-container {
+  background: url("/src/assets/destination/background-destination-desktop.jpg") no-repeat center;
+  background-size: cover;
+  min-height: 100vh;
+  padding-top: 15vh;
+  text-align: center;
+}
+.destination-container .destination-img {
+  width: 40%;
+  margin: 0.5em auto;
+}
+.destination-container .destination-nav {
+  color: #D0D6F9;
+  padding: 0.25em 0;
+  margin: 1em 0;
+  text-transform: uppercase;
+}
+.destination-container .destination-nav span {
+  margin: 0 0.5em;
+  opacity: 0.65;
+}
+.destination-container .heading {
+  font-weight: normal;
+}
+
+@media screen and (min-width: 600px) {
+  .destination-container .heading {
+    margin: 0.25em 0;
+  }
+  .destination-container .sub-heading {
+    text-align: left;
+    margin-left: 3em;
+  }
+  .destination-container .container {
+    width: 60%;
+  }
+  .destination-container .destination-img {
+    width: 20%;
+  }
+  .destination-container .destination-footer-info {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    justify-content: flex-start;
+    gap: 4em;
+  }
+}
+@media screen and (min-width: 1000px) {
+  .destination-info-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 3em auto;
+    text-align: left;
+  }
+  .destination-info-container .destination-img, .destination-info-container .destination-info {
+    width: 50%;
+  }
+  .destination-info-container .destination-img .container, .destination-info-container .destination-info .container {
+    margin: 0;
+  }
+  .destination-info-container .destination-img {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .destination-info-container .destination-img img {
+    width: 50%;
   }
 }/*# sourceMappingURL=index.css.map */
