--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -3,3 +3,12 @@
     align-items: center;
     justify-content: center;
 }
+
+@mixin background {
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    min-height: 100vh;
+    padding-top: 15vh;
+    text-align: center;
+}
