--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,3 +7,4 @@
 @import '../components/navbar/navbar';
 @import '../components/home/home';
 @import '../components/destination/destination';
+@import '../components/crew/crew';
