--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -192,7 +192,9 @@ ul {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  height: 100vh;
+  min-height: 100vh;
+  padding-top: 15vh;
+  text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -250,46 +252,78 @@ ul {
     height: 200px;
   }
 }
-.destination-container {
-  background: url("/src/assets/destination/background-destination-desktop.jpg") no-repeat center;
+.destination-container,
+.crew-container {
+  background-image: url("/src/assets/destination/background-destination-desktop.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
   background-size: cover;
   min-height: 100vh;
   padding-top: 15vh;
   text-align: center;
 }
-.destination-container .destination-img {
+.destination-container .destination-img,
+.destination-container .crew-img,
+.crew-container .destination-img,
+.crew-container .crew-img {
   width: 40%;
   margin: 0.5em auto;
 }
-.destination-container .destination-nav {
+.destination-container .destination-nav,
+.destination-container .crew-nav,
+.crew-container .destination-nav,
+.crew-container .crew-nav {
   color: #D0D6F9;
   padding: 0.25em 0;
   margin: 1em 0;
   text-transform: uppercase;
 }
-.destination-container .destination-nav span {
+.destination-container .destination-nav span,
+.destination-container .crew-nav span,
+.crew-container .destination-nav span,
+.crew-container .crew-nav span {
   margin: 0 0.5em;
   opacity: 0.65;
+  cursor: pointer;
 }
-.destination-container .heading {
+.destination-container .destination-nav span:hover,
+.destination-container .destination-nav span:focus,
+.destination-container .crew-nav span:hover,
+.destination-container .crew-nav span:focus,
+.crew-container .destination-nav span:hover,
+.crew-container .destination-nav span:focus,
+.crew-container .crew-nav span:hover,
+.crew-container .crew-nav span:focus {
+  opacity: 0.25;
+  border-bottom: 2px solid #D0D6F9;
+}
+.destination-container .heading,
+.crew-container .heading {
   font-weight: normal;
 }
 
 @media screen and (min-width: 600px) {
-  .destination-container .heading {
+  .destination-container .heading,
+.crew-container .heading {
     margin: 0.25em 0;
   }
-  .destination-container .sub-heading {
+  .destination-container .sub-heading,
+.crew-container .sub-heading {
     text-align: left;
     margin-left: 3em;
   }
-  .destination-container .container {
+  .destination-container .container,
+.crew-container .container {
     width: 60%;
   }
-  .destination-container .destination-img {
+  .destination-container .destination-img,
+.destination-container .crew-img,
+.crew-container .destination-img,
+.crew-container .crew-img {
     width: 20%;
   }
-  .destination-container .destination-footer-info {
+  .destination-container .destination-footer-info,
+.crew-container .destination-footer-info {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -298,25 +332,94 @@ ul {
   }
 }
 @media screen and (min-width: 1000px) {
-  .destination-info-container {
+  .destination-info-container,
+.crew-info-container {
     display: flex;
     align-items: center;
     justify-content: center;
     margin: 3em auto;
     text-align: left;
   }
-  .destination-info-container .destination-img, .destination-info-container .destination-info {
+  .destination-info-container .destination-img,
+.destination-info-container .destination-info,
+.destination-info-container .crew-img,
+.destination-info-container .crew-info,
+.crew-info-container .destination-img,
+.crew-info-container .destination-info,
+.crew-info-container .crew-img,
+.crew-info-container .crew-info {
     width: 50%;
   }
-  .destination-info-container .destination-img .container, .destination-info-container .destination-info .container {
+  .destination-info-container .destination-img .container,
+.destination-info-container .destination-info .container,
+.destination-info-container .crew-img .container,
+.destination-info-container .crew-info .container,
+.crew-info-container .destination-img .container,
+.crew-info-container .destination-info .container,
+.crew-info-container .crew-img .container,
+.crew-info-container .crew-info .container {
     margin: 0;
   }
-  .destination-info-container .destination-img {
+  .destination-info-container .destination-img,
+.destination-info-container .crew-img,
+.crew-info-container .destination-img,
+.crew-info-container .crew-img {
     display: flex;
     align-items: center;
     justify-content: center;
   }
-  .destination-info-container .destination-img img {
+  .destination-info-container .destination-img img,
+.destination-info-container .crew-img img,
+.crew-info-container .destination-img img,
+.crew-info-container .crew-img img {
     width: 50%;
+  }
+}
+.crew-container {
+  background: url("/src/assets/crew/background-crew-desktop.jpg") no-repeat center;
+}
+.crew-container .role {
+  font-size: 1rem;
+  opacity: 0.5;
+}
+.crew-container .name {
+  font-size: 1.65rem;
+}
+.crew-container .crew-img {
+  margin: 2em auto 0 auto;
+}
+.crew-container .crew-nav span {
+  opacity: 0.45;
+}
+.crew-container .crew-nav span svg {
+  background-color: #FFFFFF;
+  border-radius: 50%;
+}
+.crew-container .crew-nav .span:hover,
+.crew-container .crew-nav .span:focus {
+  opacity: 0.25;
+  border: none;
+}
+
+@media screen and (min-width: 600px) {
+  .crew-info-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .crew-info-container .crew-img {
+    order: 2;
+    bottom: 0;
+  }
+  .crew-info-container .crew-info {
+    order: 1;
+  }
+}
+@media screen and (min-width: 1000px) {
+  .crew-info-container {
+    width: 90%;
+    height: 100%;
+    margin: 0 auto;
+    flex-direction: row;
   }
 }/*# sourceMappingURL=index.css.map */
