--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,3 +8,4 @@
 @import '../components/home/home';
 @import '../components/destination/destination';
 @import '../components/crew/crew';
+@import '../components/technology/technology'
