--- a/src/components/crew/_crew.scss
+++ b/src/components/crew/_crew.scss
@@ -1,5 +1,7 @@
 .crew-container{
     background: url('/src/assets/crew/background-crew-desktop.jpg') no-repeat center;
+    display: flex;
+    align-items: center;
    
     .role{
         font-size: 1rem;
@@ -23,33 +25,63 @@
         .span:hover,
         .span:focus{
             opacity: 0.25;
-            border: none;
+            border: none !important; 
         }
     }
 }
 
 
 @media screen and (min-width: 600px){
+    .crew-container{
+        align-items: flex-end;
+    }
     .crew-info-container{
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        align-items: center;
+        margin: 2em 0 0 0;
+
+        .crew-info{
+            display: flex;
+            flex-direction: column-reverse;
+        }
         .crew-img{
             order: 2;
             bottom: 0;
+            width: 50%;
+            margin: 0;
+            hr{
+                display: none;
+            }
+            img{
+                width: 50%;
+            }
         }
         .crew-info{
             order: 1;
+            align-self: flex-start;
         }
+
     }
 }
 
 
 @media screen and (min-width: 1000px) {
+    .crew-container{
+        align-items: flex-end;
+    }
     .crew-info-container{
         width: 90%;
         height: 100%;
         margin: 0 auto;
         flex-direction: row;
+
+        
+        .crew-img{
+            img{
+                width: 60%;
+            }
+        }
     }
 }
