--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -5,6 +5,7 @@
     font-size: 4rem;
     letter-spacing: .15em;
     margin: .5em 0;
+    text-align: left;
 }
 
 .sub-heading{
@@ -14,6 +15,7 @@
     font-size: 1.75rem;
     font-weight: normal;
     text-transform: uppercase;
+    text-align: left;
 }
 
 .para{
@@ -21,6 +23,7 @@
     font-family: $font-para;
     line-height: 1.5rem;
     font-size: 1rem;
+    text-align: left;
 }
 .nav-link{
     font-size: .85rem;
@@ -49,12 +52,15 @@
 @media screen and ( min-width: 600px) and (max-width: 1000px) {
     .heading{
         font-size: 2.75rem;
+        text-align: center;
     }
     .sub-heading{
         font-size: 1rem;
+        text-align: center;
     }
     .para{
         font-size: .75rem;
+        text-align: center;
     }
     .nav-link{
         font-size: .65rem;
@@ -65,11 +71,14 @@
 @media screen and (max-width: 600px) {
     .heading{
         font-size: 2.5rem;
+        text-align: center;
     }
     .sub-heading{
         font-size: 1rem;
+        text-align: center;
     }
     .para{
         font-size: .75rem;
+        text-align: center;
     }
 }
