--- a/src/components/crew/_crew.scss
+++ b/src/components/crew/_crew.scss
@@ -60,7 +60,7 @@
         }
         .crew-info{
             order: 1;
-            align-self: flex-start;
+            align-self: center;
         }
 
     }
